[project]
name = "blog-llmstuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=7.1.1",
    "jupyterlab>=4.3.4",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
